--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -132,14 +132,32 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="2. Chicago Boys.jpeg" target="_blank">
-              <img src="2. Chicago Boys.jpeg" class="thumb" alt="2005">
+            <a href="2. Junta.jpeg" target="_blank">
+              <img src="2. Junta.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Junta<br><small><em>(Getty)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
+
+   <div class="container">
+    <!-- Chapter 3 -->
+    <section id="ch2" class="chapter-anchor">
+      <h2 class="h5 chapter-header">Chapter 3 - Neoliberalism: Problem or solution?</h2>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="3. Chicago Boys.jpeg" target="_blank">
+              <img src="3. Chicago Boys.jpeg" class="thumb" alt="2005">
             </a>
             <figcaption>Chicago Boys<br><small><em>(Marxsur)</em></small></figcaption>
           </figure>
         </div>
       </div>
     </section>
+
 
     <!-- Chapter 4 -->
     <section id="ch4" class="chapter-anchor">
@@ -399,7 +417,7 @@
             <a href="16.2. Beatriz Hevia.jpeg" target="_blank">
               <img src="16.2. Beatriz Hevia.jpeg" class="thumb" alt="Beatriz Hevia">
             </a>
-            <figcaption>Beatriz Hevia<br><small><em>(El Mercurio / Archivo)</em></small></figcaption>
+            <figcaption>Beatriz Hevia<br><small><em>(El Mercurio)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
