--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -165,7 +165,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="4. Constitucioon Lagos.jpeg" target="_blank">
+            <a href="4. Constitucion Lagos.jpeg" target="_blank">
               <img src="4. Constitucion Lagos.jpeg" class="thumb" alt="2005">
             </a>
             <figcaption>Constitución<br><small><em>(BCN)</em></small></figcaption>
