--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -168,7 +168,7 @@
             <a href="4. Constitucion Lagos.jpeg" target="_blank">
               <img src="4. Constitucion Lagos.jpeg" class="thumb" alt="2005">
             </a>
-            <figcaption>Constitución<br><small><em>(BCN)</em></small></figcaption>
+            <figcaption>Constitución (2005)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
       </div>
@@ -184,7 +184,7 @@
             <a href="5. Tumba Neoliberalismo.jpeg" target="_blank">
               <img src="5. Tumba Neoliberalismo.jpeg" class="thumb" alt="No estamos en guerra">
             </a>
-            <figcaption>Chile será la tumba del neoliberalismo<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
+            <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
       </div>
@@ -199,7 +199,7 @@
             <a href="9.1. No estamos en guerra.jpeg" target="_blank">
               <img src="9.1. No estamos en guerra.jpeg" class="thumb" alt="No estamos en guerra">
             </a>
-            <figcaption>No estamos en guerra<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
+            <figcaption>"No estamos en guerra"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -207,7 +207,7 @@
             <a href="9.2. La Marcha mas Grande.jpeg" target="_blank">
               <img src="9.2. La Marcha mas Grande.jpeg" class="thumb" alt="La Marcha más Grande">
             </a>
-            <figcaption>La Marcha más Grande<br><small><em>(BBC / Susana Hidalgo)</em></small></figcaption>
+            <figcaption>"La Marcha más Grande"<br><small><em>(BBC / Susana Hidalgo)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -215,7 +215,7 @@
             <a href="9. Iglesia" target="_blank">
               <img src="9. Iglesia.jpeg" class="thumb" alt="Iglesia">
             </a>
-            <figcaption>Iglesia<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
+            <figcaption>A church burns<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
           </figure>
         </div>
       </div>
@@ -246,7 +246,7 @@
             <a href="10.2. The announcment.jpeg" target="_blank">
               <img src="10.2. The announcment.jpeg" class="thumb" alt="The announcement">
             </a>
-            <figcaption>The announcement<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
+            <figcaption>The first agreement is announced<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
           </figure>
         </div>
           </div>
@@ -261,7 +261,7 @@
             <a href="12.1. Inauguracion convencion constitucional.jpeg" target="_blank">
               <img src="12.1. Inauguracion convencion constitucional.jpeg" class="thumb" alt="Inauguración Convención Constitucional">
             </a>
-            <figcaption>Inauguración Convención Constitucional<br><small><em>(Crónica Digital / PL)</em></small></figcaption>
+            <figcaption>First Day: Constitutional Convention<br><small><em>(Crónica Digital / PL)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -269,7 +269,7 @@
             <a href="12.2. Elisa Loncon.jpeg" target="_blank">
               <img src="12.2. Elisa Loncon.jpeg" class="thumb" alt="Elisa Loncón">
             </a>
-            <figcaption>Elisa Loncón<br><small><em>(Time / Cristian Soto Quiroz)</em></small></figcaption>
+            <figcaption>Elisa Loncon<br><small><em>(Time / Cristian Soto Quiroz)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -277,7 +277,7 @@
             <a href="12.3. La mesa.jpeg" target="_blank">
               <img src="12.3. La mesa.jpeg" class="thumb" alt="La mesa (Ch.12)">
             </a>
-            <figcaption>La mesa<br><small><em>(Twitter / @Jaime_Bassa)</em></small></figcaption>
+            <figcaption>Elisa Loncon and Jaime Bassa<br><small><em>(Twitter / @Jaime_Bassa)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -285,7 +285,7 @@
             <a href="12.4. Dinosours.jpeg" target="_blank">
               <img src="12.4. Dinosours.jpeg" class="thumb" alt="Dinosours">
             </a>
-            <figcaption>Dinosours<br><small><em>(Instagram / @bailapikachu.oficial)</em></small></figcaption>
+            <figcaption>The plenary<br><small><em>(Instagram / @bailapikachu.oficial)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -301,7 +301,7 @@
             <a href="12. Saumerio.jpeg" target="_blank">
               <img src="12. Saumerio.jpeg" class="thumb" alt="Saumerio">
             </a>
-            <figcaption>Saumerio<br><small><em>(CNN Chile)</em></small></figcaption>
+            <figcaption>Outisde the assembly<br><small><em>(CNN Chile)</em></small></figcaption>
           </figure>
         </div>
            </div>
@@ -357,7 +357,7 @@
             <a href="14. The announcement.jpeg" target="_blank">
               <img src="14. The announcement.jpeg" class="thumb" alt="14. The announcement">
             </a>
-            <figcaption>The announcement<br><small><em>(Reuters)</em></small></figcaption>
+            <figcaption>The second agreement is announced<br><small><em>(Reuters)</em></small></figcaption>
           </figure>
         </div>
   </section>
@@ -371,7 +371,7 @@
             <a href="15.1. Depolo.jpeg" target="_blank">
               <img src="15.1. Depolo.jpeg" class="thumb" alt="Depolo">
             </a>
-            <figcaption>Depolo<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
+            <figcaption>Sebastián Depolo<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
           </figure>
         </div>
        <div class="col-sm-6 col-md-4 mb-4">
@@ -379,7 +379,7 @@
             <a href="15. Hambre.jpeg" target="_blank">
               <img src="15. Hambre.jpeg" class="thumb" alt="Depolo">
             </a>
-            <figcaption>Hambre<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
+            <figcaption>"Hambre"<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
           </figure>
         </div>
        <div class="col-sm-6 col-md-4 mb-4">
@@ -387,7 +387,7 @@
             <a href="15. Perro Matapacos.jpeg" target="_blank">
               <img src="15. Perro Matapacos.jpeg" class="thumb" alt="Depolo">
             </a>
-            <figcaption>Perro Matapacos<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
+            <figcaption>"Perro Matapacos"<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
           </figure>
         </div>
     </section>
@@ -425,7 +425,7 @@
             <a href="16.3. La mesa.jpeg" target="_blank">
               <img src="16.3. La mesa.jpeg" class="thumb" alt="La mesa (Ch.16)">
             </a>
-            <figcaption>La mesa<br><small><em>(Twitter / @Procesoconsti23)</em></small></figcaption>
+            <figcaption>Beatriz Hevia and Aldo Valle<br><small><em>(Twitter / @Procesoconsti23)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -433,7 +433,7 @@
             <a href="16.4. Consejo Constitucional pleno.jpeg" target="_blank">
               <img src="16.4. Consejo Constitucional pleno.jpeg" class="thumb" alt="Consejo Constitucional pleno">
             </a>
-            <figcaption>Consejo Constitucional pleno<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
+            <figcaption>The plenary<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
           </figure>
         </div>
 </section>
