--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -165,12 +165,49 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
+            <a href="4. Aylwin.jpeg" target="_blank">
+              <img src="4. Aylwin.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Patricio Aylwin (1990-1994)<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="4. Frei.jpeg" target="_blank">
+              <img src="4. Frei.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Eduardo Frei (1994-2000)<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="4. Lagos.jpeg" target="_blank">
+              <img src="4. Lagos.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Ricardo Lagos (2000-2006)<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="4. Bachelet.jpeg" target="_blank">
+              <img src="4. Bachelet.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Michelle Bachelet (2006-2010)<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
             <a href="4. Constitucion Lagos.jpeg" target="_blank">
               <img src="4. Constitucion Lagos.jpeg" class="thumb" alt="2005">
             </a>
             <figcaption>Constitución (2005)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
+
       </div>
     </section>
 
