--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -138,7 +138,15 @@
             <figcaption>Junta<br><small><em>(Getty)</em></small></figcaption>
           </figure>
         </div>
-      </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="2. Pinochet.jpeg" target="_blank">
+              <img src="2. Pinochet.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Augusto Pinochet (1973-1990)<br><small><em>(Getty)</em></small></figcaption>
+          </figure>
+        </div>      
+  </div>
     </section>
 
 
