--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -132,6 +132,14 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
+            <a href="2. Allende.jpeg" target="_blank">
+              <img src="2. Allende.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Salvador Allende (1970-1973)<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+        div class="col-sm-6 col-md-4 mb-4">
+          <figure>
             <a href="2. Junta.jpeg" target="_blank">
               <img src="2. Junta.jpeg" class="thumb" alt="2005">
             </a>
@@ -143,7 +151,7 @@
             <a href="2. Pinochet.jpeg" target="_blank">
               <img src="2. Pinochet.jpeg" class="thumb" alt="2005">
             </a>
-            <figcaption>Augusto Pinochet (1973-1990)<br><small><em>(Getty)</em></small></figcaption>
+            <figcaption>Augusto Pinochet (1973-1990)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>      
   </div>
