--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -243,6 +243,31 @@
       </div>
     </section>
 
+
+    <!-- Chapter 8 -->
+    <section id="ch8" class="chapter-anchor">
+      <h2 class="h5 chapter-header">Chapter 8 — A rupturist discourse</h2>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="8. Bachelet2.jpeg" target="_blank">
+              <img src="8. Bachelet2.jpeg" class="thumb" alt="No estamos en guerra">
+            </a>
+            <figcaption>Michelle Bachelet (2014-2018)<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Piñera2.jpeg" target="_blank">
+              <img src="9. Piñera2.jpeg" class="thumb" alt="La Marcha más Grande">
+            </a>
+            <figcaption>Sebastián Piñera (2018-2022)<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
+</section>
+
+
     <!-- Chapter 9 -->
     <section id="ch9" class="chapter-anchor">
       <h2 class="h5 chapter-header">Chapter 9 — October 18, 2019</h2>
