--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -138,7 +138,7 @@
             <figcaption>Salvador Allende (1970-1973)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
-        div class="col-sm-6 col-md-4 mb-4">
+        <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="2. Junta.jpeg" target="_blank">
               <img src="2. Junta.jpeg" class="thumb" alt="2005">
