--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -247,15 +247,15 @@
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="8. Bachelet2.jpeg" target="_blank">
-              <img src="8. Bachelet2.jpeg" class="thumb" alt="No estamos en guerra">
+              <img src="8. Bachelet2.jpeg" class="thumb" alt="Michelle Bachelet (2014-2018)">
             </a>
             <figcaption>Michelle Bachelet (2014-2018)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="9. Piñera2.jpeg" target="_blank">
-              <img src="9. Piñera2.jpeg" class="thumb" alt="La Marcha más Grande">
+            <a href="8. Piñera2.jpeg" target="_blank">
+              <img src="8. Piñera2.jpeg" class="thumb" alt="Sebastián Piñera (2018-2022)">
             </a>
             <figcaption>Sebastián Piñera (2018-2022)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
