--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -219,7 +219,14 @@
             <figcaption>Constitución (2005)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
-
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="4. Escalona.jpeg" target="_blank">
+              <img src="4. Escalona.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Camilo Escalona<br><small><em>(Youtube / @telodamus)</em></small></figcaption>
+          </figure>
+        </div>
       </div>
     </section>
 
