--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -154,7 +154,15 @@
             <figcaption>Augusto Pinochet (1973-1990)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>      
-  </div>
+         <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="2. Guzman.jpeg" target="_blank">
+              <img src="2. Guzman.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Jaime Guzmán<br><small><em>(Emol)</em></small></figcaption>
+          </figure>
+        </div>  
+      </div>
     </section>
 
 
@@ -169,6 +177,14 @@
               <img src="3. Chicago Boys.jpeg" class="thumb" alt="2005">
             </a>
             <figcaption>Chicago Boys<br><small><em>(Marxsur)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="3. Friedman.jpeg" target="_blank">
+              <img src="3. Friedman.jpeg" class="thumb" alt="Friedman">
+            </a>
+            <figcaption>Milton Friedman with Augusto Pinochet (1975)<br><small><em>(Norberto Barreto / La Ventana Rota)</em></small></figcaption>
           </figure>
         </div>
       </div>
@@ -243,7 +259,7 @@
             <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
-      </div>
+  </div>
     </section>
 
 
@@ -299,7 +315,31 @@
             <figcaption>A church burns<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
           </figure>
         </div>
-      </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. ACAB.jpeg" target="_blank">
+              <img src="9. ACAB.jpeg" class="thumb" alt="ACAB">
+            </a>
+            <figcaption>ACAB"<br><small><em>(Resumen Latinoamericano)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9.2. La Marcha mas Grande.jpeg" target="_blank">
+              <img src="9.2. La Marcha mas Grande.jpeg" class="thumb" alt="La Marcha más Grande">
+            </a>
+            <figcaption>"La Marcha más Grande"<br><small><em>(BBC / Susana Hidalgo)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Iglesia" target="_blank">
+              <img src="9. Iglesia.jpeg" class="thumb" alt="Iglesia">
+            </a>
+            <figcaption>A church burns<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
+          </figure>
+        </div>
+  </div>
 </section>
 
     <!-- Chapter 10 -->
