--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -325,10 +325,10 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="9.2. La Marcha mas Grande.jpeg" target="_blank">
-              <img src="9.2. La Marcha mas Grande.jpeg" class="thumb" alt="La Marcha más Grande">
+            <a href="9. Resistencia.jpeg" target="_blank">
+              <img src="9. Resistencia.jpeg" class="thumb" alt="Resistencia">
             </a>
-            <figcaption>"La Marcha más Grande"<br><small><em>(BBC / Susana Hidalgo)</em></small></figcaption>
+            <figcaption>"La Marcha más Grande"<br><small><em>(Pablo Rojas Madariaga/NurPhoto/PA Image)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
