--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -511,7 +511,24 @@
             <figcaption>"Perro Matapacos"<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
           </figure>
         </div>
-    </section>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15. Duran.jpeg" target="_blank">
+              <img src="15. Duran.jpeg" class="thumb" alt="Duran">
+            </a>
+            <figcaption>Gonzalo Durán<br><small><em>(La Tercera)</em></small></figcaption>
+          </figure>
+        </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15. Jara.jpeg" target="_blank">
+              <img src="15. Jara.jpeg" class="thumb" alt="Jara">
+            </a>
+            <figcaption>Jeannette Jara<br><small><em>(El Líbero)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
+</section>
 
     <!-- Chapter 16 -->
     <section id="ch16" class="chapter-anchor">
