--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -309,7 +309,7 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="9. Iglesia" target="_blank">
+            <a href="9. Iglesia.jpeg" target="_blank">
               <img src="9. Iglesia.jpeg" class="thumb" alt="Iglesia">
             </a>
             <figcaption>A church burns<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
@@ -333,10 +333,10 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="9. Iglesia" target="_blank">
-              <img src="9. Iglesia.jpeg" class="thumb" alt="Iglesia">
+            <a href="9. Dignidad.jpeg" target="_blank">
+              <img src="9. Dignidad.jpeg" class="thumb" alt="Dignidad">
             </a>
-            <figcaption>A church burns<br><small><em>(Instagram / @peppadelkaos)</em></small></figcaption>
+            <figcaption>"Dignidad"<br><small><em>(Página 19)</em></small></figcaption>
           </figure>
         </div>
   </div>
