--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -277,13 +277,45 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
+            <a href="8. Proceso constitucional 2015.jpeg" target="_blank">
+              <img src="8. Proceso constitucional 2015.jpeg" class="thumb" alt="2015">
+            </a>
+            <figcaption>Constitutional Process 2015-2018<br><small><em>(Government of Chile /Senama)</em></small></figcaption>
+          </figure>
+        </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
             <a href="8. Piñera2.jpeg" target="_blank">
               <img src="8. Piñera2.jpeg" class="thumb" alt="Sebastián Piñera (2018-2022)">
             </a>
             <figcaption>Sebastián Piñera (2018-2022)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
         </div>
-      </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="8. Piñera2.jpeg" target="_blank">
+              <img src="8. Piñera2.jpeg" class="thumb" alt="Sebastián Piñera (2018-2022)">
+            </a>
+            <figcaption>Sebastián Piñera (2018-2022)<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="8. Marcha Paraguas.jpeg" target="_blank">
+              <img src="8. Marcha Paraguas.jpeg" class="thumb" alt="Sebastián Piñera (2018-2022)">
+            </a>
+            <figcaption>Marcha de los Paraguas (2006)<br><small><em>(Radio Infinita)</em></small></figcaption>
+          </figure>
+        </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="8. Revolucion Pinguina.jpeg" target="_blank">
+              <img src="8. Revolucion Pinguina.jpeg" class="thumb" alt="Sebastián Piñera (2018-2022)">
+            </a>
+            <figcaption>Revolución Pinguina (2011)<br><small><em>(La Tercera)</em></small></figcaption>
+          </figure>
+        </div>
+     </div>
 </section>
 
 
