--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -315,7 +315,15 @@
             <figcaption>Revolución Pinguina (2011)<br><small><em>(La Tercera)</em></small></figcaption>
           </figure>
         </div>
-     </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="8. Estudiantes.jpeg" target="_blank">
+              <img src="8. Estudiantes.jpeg" class="thumb" alt="Estudiantes)">
+            </a>
+            <figcaption>Student leaders: Camila Vallejo, Giorgio Jackson, and Gabriel Boric<br><small><em>(El Mostrador)</em></small></figcaption>
+          </figure>
+        </div>
+  </div>
 </section>
 
 
