--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -293,16 +293,8 @@
         </div>
        <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="8. Piñera2.jpeg" target="_blank">
-              <img src="8. Piñera2.jpeg" class="thumb" alt="Sebastián Piñera (2018-2022)">
-            </a>
-            <figcaption>Sebastián Piñera (2018-2022)<br><small><em>(BCN)</em></small></figcaption>
-          </figure>
-        </div>
-       <div class="col-sm-6 col-md-4 mb-4">
-          <figure>
             <a href="8. Marcha Paraguas.jpeg" target="_blank">
-              <img src="8. Marcha Paraguas.jpeg" class="thumb" alt="Sebastián Piñera (2018-2022)">
+              <img src="8. Marcha Paraguas.jpeg" class="thumb" alt="Marcha de los Paraguas">
             </a>
             <figcaption>Marcha de los Paraguas (2006)<br><small><em>(Radio Infinita)</em></small></figcaption>
           </figure>
@@ -310,7 +302,7 @@
        <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="8. Revolucion Pinguina.jpeg" target="_blank">
-              <img src="8. Revolucion Pinguina.jpeg" class="thumb" alt="Sebastián Piñera (2018-2022)">
+              <img src="8. Revolucion Pinguina.jpeg" class="thumb" alt="Revolución Pinguina ">
             </a>
             <figcaption>Revolución Pinguina (2011)<br><small><em>(La Tercera)</em></small></figcaption>
           </figure>
@@ -318,7 +310,7 @@
        <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="8. Estudiantes.jpeg" target="_blank">
-              <img src="8. Estudiantes.jpeg" class="thumb" alt="Estudiantes)">
+              <img src="8. Estudiantes.jpeg" class="thumb" alt="Estudiantes">
             </a>
             <figcaption>Student leaders: Camila Vallejo, Giorgio Jackson, and Gabriel Boric<br><small><em>(El Mostrador)</em></small></figcaption>
           </figure>
