--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -521,13 +521,13 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="15.1. Depolo.jpeg" target="_blank">
-              <img src="15.1. Depolo.jpeg" class="thumb" alt="Depolo">
+            <a href="15. Baila.jpeg" target="_blank">
+              <img src="15. Baila.jpeg" class="thumb" alt="Baila">
             </a>
-            <figcaption>Sebastián Depolo<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
+            <figcaption>"El que no baila, no pasa"<br><small><em>(T13 / Youtube)</em></small></figcaption>
           </figure>
         </div>
-       <div class="col-sm-6 col-md-4 mb-4">
+    <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="15. Hambre.jpeg" target="_blank">
               <img src="15. Hambre.jpeg" class="thumb" alt="Depolo">
@@ -543,7 +543,15 @@
             <figcaption>"Perro Matapacos"<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
           </figure>
         </div>
-       <div class="col-sm-6 col-md-4 mb-4">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15.1. Depolo.jpeg" target="_blank">
+              <img src="15.1. Depolo.jpeg" class="thumb" alt="Depolo">
+            </a>
+            <figcaption>Sebastián Depolo<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
+          </figure>
+        </div>
+    <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="15. Duran.jpeg" target="_blank">
               <img src="15. Duran.jpeg" class="thumb" alt="Duran">
