--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -524,7 +524,7 @@
             <a href="15. Baila.jpeg" target="_blank">
               <img src="15. Baila.jpeg" class="thumb" alt="Baila">
             </a>
-            <figcaption>"El que no baila, no pasa"<br><small><em>(T13 / Youtube)</em></small></figcaption>
+            <figcaption>"El que no baila, no pasa"<br><small><em>(Contexto / Agencia UNO)</em></small></figcaption>
           </figure>
         </div>
     <div class="col-sm-6 col-md-4 mb-4">
