--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -259,7 +259,15 @@
             <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
-  </div>
+         <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="5. Chile OCDE.jpeg" target="_blank">
+              <img src="5. Chile OCDE.jpeg" class="thumb" alt="OCDE">
+            </a>
+            <figcaption>Michelle Bachelet (and Andrés Velasco) accept invitation to join OCDE from Secretary General José Ángel Gurría.<br><small><em>(EFE)</em></small></figcaption>
+          </figure>
+        </div>
+    </div>
     </section>
 
 
