--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -575,7 +575,31 @@
             <figcaption>Jeannette Jara<br><small><em>(El Líbero)</em></small></figcaption>
           </figure>
         </div>
-      </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15. Primer Retiro.jpeg" target="_blank">
+              <img src="15. Primer Retiro.jpeg" class="thumb" alt="Depolo">
+            </a>
+            <figcaption>First Pension Funds Withdral<br><small><em>(La Tercera)</em></small></figcaption>
+          </figure>
+        </div>
+    <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15. Second Retiro.jpeg" target="_blank">
+              <img src="15. Second Retiro.jpeg" class="thumb" alt="Duran">
+            </a>
+            <figcaption>Second Pension Funds Withdral<br><small><em>(La Tercera)</em></small></figcaption>
+          </figure>
+        </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15. Third Retiro.jpeg" target="_blank">
+              <img src="15. Third Retiro.jpeg" class="thumb" alt="Jara">
+            </a>
+            <figcaption>Third Pension Funds Withdral<br><small><em>(La Tercera)</em></small></figcaption>
+          </figure>
+        </div>
+    </div>
 </section>
 
     <!-- Chapter 16 -->
