--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -267,7 +267,15 @@
             <figcaption>Michelle Bachelet (and Andrés Velasco) accept invitation to join OCDE from Secretary General José Ángel Gurría.<br><small><em>(EFE)</em></small></figcaption>
           </figure>
         </div>
-    </div>
+         <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="5. Chile Slums.jpeg" target="_blank">
+              <img src="5. Chile Slums.jpeg" class="thumb" alt="OCDE">
+            </a>
+            <figcaption>Campamento in Chile.<br><small><em>(Catcomm)</em></small></figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
 
 
