--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -473,7 +473,15 @@
             <figcaption>Outisde the assembly<br><small><em>(CNN Chile)</em></small></figcaption>
           </figure>
         </div>
-           </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="12. Proposal.jpeg" target="_blank">
+              <img src="12. Proposal.jpeg" class="thumb" alt="Saumerio">
+            </a>
+            <figcaption>The first proposal<br><small><em>(Marcelo Hernandez/Getty Images)</em></small></figcaption>
+          </figure>
+        </div>
+   </div>
          </section>
 
 
@@ -653,7 +661,15 @@
             </a>
             <figcaption>The plenary<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
           </figure>
+          <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="16. Proposal.jpeg" target="_blank">
+              <img src="16. Proposal.jpeg" class="thumb" alt="Second proposal">
+            </a>
+            <figcaption>The second proposal<br><small><em>(Radio Pauta)</em></small></figcaption>
+          </figure>
         </div>
+    </div>
 </section>
 
     <hr>
