--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -569,8 +569,8 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="15.1. Depolo.jpeg" target="_blank">
-              <img src="15.1. Depolo.jpeg" class="thumb" alt="Depolo">
+            <a href="15. Depolo.jpeg" target="_blank">
+              <img src="15. Depolo.jpeg" class="thumb" alt="Depolo">
             </a>
             <figcaption>Sebastián Depolo<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
           </figure>
@@ -593,8 +593,8 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="15. Primer Retiro.jpeg" target="_blank">
-              <img src="15. Primer Retiro.jpeg" class="thumb" alt="Depolo">
+            <a href="15. First Retiro.jpeg" target="_blank">
+              <img src="15. First Retiro.jpeg" class="thumb" alt="Depolo">
             </a>
             <figcaption>First Pension Funds Withdral<br><small><em>(La Tercera)</em></small></figcaption>
           </figure>
