--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -663,6 +663,7 @@
           </figure>
           <div class="col-sm-6 col-md-4 mb-4">
           <figure>
+          </div>
             <a href="16. Proposal.jpeg" target="_blank">
               <img src="16. Proposal.jpeg" class="thumb" alt="Second proposal">
             </a>
