--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -421,6 +421,37 @@
           </div>
            </section>
 
+    <!-- Chapter 11 -->
+    <section id="ch10" class="chapter-anchor">
+      <h2 class="h5 chapter-header">Chapter 11 — The rise of Gabriel Boric</h2>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="11. Kast.jpeg" target="_blank">
+              <img src="11. Kast.jpeg" class="thumb" alt="The agreement 1">
+            </a>
+            <figcaption>José Antonio Kast<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="11. Second Round .jpeg" target="_blank">
+              <img src="11. Second Round.jpeg" class="thumb" alt="The agreement 2">
+            </a>
+            <figcaption>Kast vs Boric<br><small><em>(BCN)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="11. First Speech.jpeg" target="_blank">
+              <img src="11. First Speech.jpeg" class="thumb" alt="The announcement">
+            </a>
+            <figcaption>The first speech<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
+          </figure>
+        </div>
+          </div>
+           </section>
+
     <!-- Chapter 12 -->
     <section id="ch12" class="chapter-anchor">
       <h2 class="h5 chapter-header">Chapter 12 — The (first) Constitutional Convention</h2>
