--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -430,7 +430,7 @@
             <a href="11. Kast.jpeg" target="_blank">
               <img src="11. Kast.jpeg" class="thumb" alt="The agreement 1">
             </a>
-            <figcaption>José Antonio Kast<br><small><em>(BCN)</em></small></figcaption>
+            <figcaption>José Antonio Kast<br><small><em>(El Mercurio)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -438,7 +438,7 @@
             <a href="11. Second Round .jpeg" target="_blank">
               <img src="11. Second Round.jpeg" class="thumb" alt="The agreement 2">
             </a>
-            <figcaption>Kast vs Boric<br><small><em>(BCN)</em></small></figcaption>
+            <figcaption>Kast vs Boric<br><small><em>(La Tercera)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -446,7 +446,7 @@
             <a href="11. First Speech.jpeg" target="_blank">
               <img src="11. First Speech.jpeg" class="thumb" alt="The announcement">
             </a>
-            <figcaption>The first speech<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
+            <figcaption>The first speech<br><small><em>(Diario UChile)</em></small></figcaption>
           </figure>
         </div>
           </div>
