--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -692,6 +692,7 @@
             </a>
             <figcaption>The plenary<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
           </figure>
+           </div>
           <div class="col-sm-6 col-md-4 mb-4">
           <figure>
           </div>
