--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -435,7 +435,7 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="11. Second Round .jpeg" target="_blank">
+            <a href="11. Second Round.jpeg" target="_blank">
               <img src="11. Second Round.jpeg" class="thumb" alt="The agreement 2">
             </a>
             <figcaption>Kast vs Boric<br><small><em>(La Tercera)</em></small></figcaption>
@@ -449,7 +449,31 @@
             <figcaption>The first speech<br><small><em>(Diario UChile)</em></small></figcaption>
           </figure>
         </div>
-          </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="11. Izkia Siches.jpeg" target="_blank">
+              <img src="11. Izkia Siches.jpeg" class="thumb" alt="The agreement 1">
+            </a>
+            <figcaption>Izkia Siches<br><small><em>(Ex-Ante)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="11. Catalina Perez.jpeg" target="_blank">
+              <img src="11. Catalina Perez.jpeg" class="thumb" alt="The agreement 2">
+            </a>
+            <figcaption>Catalina Perez<br><small><em>(Radios Regionales)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="11. First Speech.jpeg" target="_blank">
+              <img src="11. First Speech.jpeg" class="thumb" alt="The announcement">
+            </a>
+            <figcaption>The first speech<br><small><em>(Diario UChile)</em></small></figcaption>
+          </figure>
+        </div>
+    </div>
            </section>
 
     <!-- Chapter 12 -->
@@ -695,7 +719,6 @@
            </div>
           <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-          </div>
             <a href="16. Proposal.jpeg" target="_blank">
               <img src="16. Proposal.jpeg" class="thumb" alt="Second proposal">
             </a>
