--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -467,10 +467,10 @@
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="11. First Speech.jpeg" target="_blank">
-              <img src="11. First Speech.jpeg" class="thumb" alt="The announcement">
+            <a href="11. Government.jpeg" target="_blank">
+              <img src="11. Government.jpeg" class="thumb" alt="The announcement">
             </a>
-            <figcaption>The first speech<br><small><em>(Diario UChile)</em></small></figcaption>
+            <figcaption>Former student leaders, now President and Ministers: Camila Vallejo, Giorgio Jackson, and Gabriel Boric<br><small><em>(Diario UChile)</em></small></figcaption>
           </figure>
         </div>
     </div>
